--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -2,7 +2,7 @@ spring:
   application:
     name: cartas-pokemon
   datasource:
-    url: jdbc:postgres://localhost:5432/library
+    url: jdbc:postgresql://localhost:5432/library
     username: postgres
     password: postgres
     driver-class-name: org.postgresql.Driver
