--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -1,8 +1,12 @@
 spring:
   application:
-    name: cartas-pokemon
+    name: avaliador-filmes
   datasource:
-    url: jdbc:postgresql://localhost:5432/library
-    username: postgres
-    password: postgres
-    driver-class-name: org.postgresql.Driver
+#    url: jdbc:postgresql://localhost:5432/library
+    url: jdbc:h2:mem:teste
+    username: sa
+    password: password
+#    username: postgres
+#    password: postgres
+    driver-class-name: org.h2.Driver
+#    driver-class-name: org.postgresql.Driver
