--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -49,3 +49,10 @@ api:
   security:
     token:
       secret: ${JWT_SECRET:minha-chave-secreta}
+
+feign:
+  client:
+    config:
+      tmdb:
+        url: ${TMDB_BASE_URL}
+        key: ${TMDB_API_KEY}
